--- a/ts/package.json
+++ b/ts/package.json
@@ -5,11 +5,16 @@
   "main": "climbing-stairs.js",
   "keywords": [],
   "author": "",
+  "type": "module",
   "license": "ISC",
+  "scripts": {
+    "test": "vitest"
+  },
   "devDependencies": {
+    "@tsconfig/node20": "^20.1.2",
+    "@types/node": "^20.8.9",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2",
-    "@tsconfig/node20": "^20.1.2",
-    "@types/node": "^20.8.9"
+    "vitest": "^0.34.6"
   }
 }
