--- a/kata-machine/.vscode/launch.json
+++ b/kata-machine/.vscode/launch.json
@@ -9,7 +9,7 @@
         "--inspect-brk",
         "${workspaceRoot}/node_modules/.bin/jest",
         "--runInBand",
-        "Trie"
+        "BFSGraphMatrix"
       ],
       "console": "integratedTerminal",
       "internalConsoleOptions": "neverOpen"
